# tmp-table-storing-m2m-changes

./: .gitignore  pyproject.toml
dj/dj/: settings.py  urls.py
dj/some/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
dj/some/migrations/: 0001_initial.py  0002_remove_tmpgroupforfillingwithusers_group.py
dj/static/js/admin/: paginated.js
dj/templates/admin/: custom_transfer_form.html
